change to local db, finish workshop basic functions